source/teacher/.dart_tool/build/generated/angular_test/lib/src/errors/generic_type_missing.template.module.library
{"isEntrypoint":false,"deps":["angular_test|lib/src/errors/generic_type_missing.dart"],"parts":[],"conditionalDeps":[],"sdkDeps":[],"hasMain":false}